// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalForm /> should render a create form 1`] = `
<form
  id="proposal-form"
>
  <div
    className="mt-20"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Description 1",
        }
      }
    />
  </div>
  <Field
    addonAfter={
      <Glyphicon
        bsClass="glyphicon"
        className=""
        glyph="refresh"
      />
    }
    autoComplete="off"
    component={[Function]}
    help="Title help"
    id="proposal_title"
    label={
      <FormattedMessage
        id="proposal.title"
        values={Object {}}
      />
    }
    name="title"
    type="text"
  />
  <Collapse
    dimension="height"
    getDimensionValue={[Function]}
    in={false}
    mountOnEnter={false}
    timeout={300}
    transitionAppear={false}
    unmountOnExit={false}
  >
    <Panel
      bsClass="panel"
      bsStyle="default"
      defaultExpanded={false}
      header={
        <FormattedMessage
          id="proposal.suggest_header"
          values={
            Object {
              "matches": 0,
              "terms": "",
            }
          }
        />
      }
    >
      <ul
        style={
          Object {
            "listStyleType": "none",
            "padding": 0,
          }
        }
      />
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          id="global.close"
          values={Object {}}
        />
      </Button>
    </Panel>
  </Collapse>
  <Field
    autoComplete="off"
    component={[Function]}
    help="Summary help"
    id="proposal_summary"
    label={
      <span>
        <FormattedMessage
          id="proposal.summary"
          values={Object {}}
        />
        <span
          className="excerpt"
        >
           
          <FormattedMessage
            id="global.form.optional"
            values={Object {}}
          />
        </span>
      </span>
    }
    maxLength="140"
    name="summary"
    type="textarea"
  />
  <Field
    component={[Function]}
    help="Theme help"
    id="proposal_theme"
    label={
      <span>
        <FormattedMessage
          id="proposal.theme"
          values={Object {}}
        />
      </span>
    }
    name="theme"
    type="select"
  >
    <FormattedMessage
      id="proposal.select.theme"
      values={Object {}}
    />
    <option
      value={1}
    >
      Theme 1
    </option>
  </Field>
  <Field
    component={[Function]}
    help="Category help"
    id="proposal_category"
    label={
      <span>
        <FormattedMessage
          id="proposal.category"
          values={Object {}}
        />
      </span>
    }
    name="category"
    type="select"
  >
    <FormattedMessage
      id="proposal.select.category"
      values={Object {}}
    />
    <option
      value="category1"
    >
      Category 1
    </option>
    <option
      value="category2"
    >
      Category 2
    </option>
  </Field>
  <Field
    component={[Function]}
    formName="proposal-form"
    help="Address help"
    id="proposal_address"
    label={
      <FormattedMessage
        id="proposal.map.form.field"
        values={Object {}}
      />
    }
    name="addressText"
    placeholder="proposal.map.form.placeholder"
    type="address"
  />
  <Field
    component={[Function]}
    help="District help"
    id="proposal_district"
    label={
      <span>
        <FormattedMessage
          id="proposal.district"
          values={Object {}}
        />
      </span>
    }
    name="district"
    type="select"
  >
    <FormattedMessage
      id="proposal.select.district"
      values={Object {}}
    />
    <option
      value="district1"
    >
      District 1
    </option>
    <option
      value="district2"
    >
      District 2
    </option>
  </Field>
  <Field
    component={[Function]}
    help="Description help"
    id="proposal_body"
    label={
      <FormattedMessage
        id="proposal.body"
        values={Object {}}
      />
    }
    name="body"
    type="editor"
  />
  <FieldArray
    component={[Function]}
    intl={
      Object {
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "now": [Function],
      }
    }
    name="responses"
    questions={
      Array [
        Object {
          "id": "question1",
          "position": 1,
          "private": true,
          "required": true,
          "title": "Lol",
          "type": "text",
        },
      ]
    }
  />
  <Field
    component={[Function]}
    help="Illustration help"
    id="proposal_media"
    image={null}
    label={
      <span>
        <FormattedMessage
          id="proposal.media"
          values={Object {}}
        />
        <span
          className="excerpt"
        >
           
          <FormattedMessage
            id="global.form.optional"
            values={Object {}}
          />
        </span>
      </span>
    }
    name="media"
    type="image"
  />
</form>
`;

exports[`<ProposalForm /> should render an edit form 1`] = `
<form
  id="proposal-form"
>
  <div
    className="mt-20"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Description 1",
        }
      }
    />
  </div>
  <Field
    addonAfter={
      <Glyphicon
        bsClass="glyphicon"
        className=""
        glyph="refresh"
      />
    }
    autoComplete="off"
    component={[Function]}
    help="Title help"
    id="proposal_title"
    label={
      <FormattedMessage
        id="proposal.title"
        values={Object {}}
      />
    }
    name="title"
    type="text"
  />
  <Collapse
    dimension="height"
    getDimensionValue={[Function]}
    in={false}
    mountOnEnter={false}
    timeout={300}
    transitionAppear={false}
    unmountOnExit={false}
  >
    <Panel
      bsClass="panel"
      bsStyle="default"
      defaultExpanded={false}
      header={
        <FormattedMessage
          id="proposal.suggest_header"
          values={
            Object {
              "matches": 0,
              "terms": "",
            }
          }
        />
      }
    >
      <ul
        style={
          Object {
            "listStyleType": "none",
            "padding": 0,
          }
        }
      />
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          id="global.close"
          values={Object {}}
        />
      </Button>
    </Panel>
  </Collapse>
  <Field
    autoComplete="off"
    component={[Function]}
    help="Summary help"
    id="proposal_summary"
    label={
      <span>
        <FormattedMessage
          id="proposal.summary"
          values={Object {}}
        />
        <span
          className="excerpt"
        >
           
          <FormattedMessage
            id="global.form.optional"
            values={Object {}}
          />
        </span>
      </span>
    }
    maxLength="140"
    name="summary"
    type="textarea"
  />
  <Field
    component={[Function]}
    help="Theme help"
    id="proposal_theme"
    label={
      <span>
        <FormattedMessage
          id="proposal.theme"
          values={Object {}}
        />
      </span>
    }
    name="theme"
    type="select"
  >
    <FormattedMessage
      id="proposal.select.theme"
      values={Object {}}
    />
    <option
      value={1}
    >
      Theme 1
    </option>
  </Field>
  <Field
    component={[Function]}
    help="Category help"
    id="proposal_category"
    label={
      <span>
        <FormattedMessage
          id="proposal.category"
          values={Object {}}
        />
      </span>
    }
    name="category"
    type="select"
  >
    <FormattedMessage
      id="proposal.select.category"
      values={Object {}}
    />
    <option
      value="category1"
    >
      Category 1
    </option>
    <option
      value="category2"
    >
      Category 2
    </option>
  </Field>
  <Field
    component={[Function]}
    formName="proposal-form"
    help="Address help"
    id="proposal_address"
    label={
      <FormattedMessage
        id="proposal.map.form.field"
        values={Object {}}
      />
    }
    name="addressText"
    placeholder="proposal.map.form.placeholder"
    type="address"
  />
  <Field
    component={[Function]}
    help="District help"
    id="proposal_district"
    label={
      <span>
        <FormattedMessage
          id="proposal.district"
          values={Object {}}
        />
      </span>
    }
    name="district"
    type="select"
  >
    <FormattedMessage
      id="proposal.select.district"
      values={Object {}}
    />
    <option
      value="district1"
    >
      District 1
    </option>
    <option
      value="district2"
    >
      District 2
    </option>
  </Field>
  <Field
    component={[Function]}
    help="Description help"
    id="proposal_body"
    label={
      <FormattedMessage
        id="proposal.body"
        values={Object {}}
      />
    }
    name="body"
    type="editor"
  />
  <FieldArray
    component={[Function]}
    intl={
      Object {
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "now": [Function],
      }
    }
    name="responses"
    questions={
      Array [
        Object {
          "id": "question1",
          "position": 1,
          "private": true,
          "required": true,
          "title": "Lol",
          "type": "text",
        },
      ]
    }
  />
  <Field
    component={[Function]}
    help="Illustration help"
    id="proposal_media"
    image="http://capco.dev"
    label={
      <span>
        <FormattedMessage
          id="proposal.media"
          values={Object {}}
        />
        <span
          className="excerpt"
        >
           
          <FormattedMessage
            id="global.form.optional"
            values={Object {}}
          />
        </span>
      </span>
    }
    name="media"
    type="image"
  />
</form>
`;
